<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LightHouse_Fitness</string>
    <string name="app_title">Light House Fitness \n <small>Let\'s Get Moving</small></string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="register_account_title">Register Account</string>
    <string name="user_name_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login_button">LOGIN</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="submit_button">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add">Add</string>
    <!-- AgePicker -->
    <string name="agePicker">Age</string>

    <!-- Timer -->
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="channel_name">Time remaining</string>
    <string name="channel_description">Displays how much time is left</string>
    <string name="channel_name_completed">Timer completed</string>
    <string name="channel_description_completed">Displays when the timer completes</string>
    <string name="timer_finished">Timer has finished!</string>
</resources>