<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.LightHouse.Fitness.Registration_Activity">
    <ImageView
        android:id="@+id/login_hero_bw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:fontFamily="@font/arialbold"
        app:layout_constraintBottom_toTopOf="@+id/textView_Register_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_hero_bw_jonathan_borba_unsplash" />

    <TextView
        android:id="@+id/textView_Register_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/arialbold"
        android:text="@string/register_account_title"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/Text_Register_User_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_hero_bw" />

    <EditText
        android:id="@+id/Text_Register_User_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/arialbold"
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Text_Register_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Register_Title" />

    <EditText
        android:id="@+id/Text_Register_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/arialbold"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/Text_Register_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Register_User_Name" />

    <EditText
        android:id="@+id/Text_Register_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/arialbold"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/Text_Register_Retyped_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Register_Email" />

    <EditText
        android:id="@+id/Text_Register_Retyped_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/arialbold"
        android:ems="10"
        android:hint="@string/retype_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_Register_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Register_Password" />


    <Button
        android:id="@+id/button_Register_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_up_button"
        app:backgroundTint="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Register_Retyped_Password" />


</androidx.constraintlayout.widget.ConstraintLayout>