<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.LightHouse.Fitness.Password_Reset_Activity">

    <ImageView
        android:id="@+id/login_hero_bw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/textView_Register_Title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_hero_bw_jonathan_borba_unsplash" />

    <TextView
        android:id="@+id/textView_Register_Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title"
        android:textSize="36sp"
        android:fontFamily="@font/arialbold"
        app:layout_constraintBottom_toTopOf="@+id/editText_UserEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_hero_bw" />

    <EditText
        android:id="@+id/editText_UserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:fontFamily="@font/arialbold"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/button_Reset_Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Register_Title2" />

    <Button
        android:id="@+id/button_Reset_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_UserEmail"
        app:layout_constraintVertical_bias="1.0" />








</androidx.constraintlayout.widget.ConstraintLayout>